fix: spacing for last notice

--- a/css/src/general-page.css
+++ b/css/src/general-page.css
@@ -3,10 +3,6 @@ body.toplevel_page_wpseo_dashboard {
 		display: none;
 	}
 
-	.yoast-general-page-notices:last-child {
-		margin-bottom: 2rem;
-	}
-
 	.yoast-general-page-notice, .yoast-webinar-dashboard {
 		background: white;
 		padding: 0.75rem;
@@ -55,13 +51,15 @@ body.toplevel_page_wpseo_dashboard {
 
 	.yoast-webinar-dashboard .notice-dismiss:before {
 		/* yst-text-slate-400 */
-		background: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='2' stroke='%2394A3B8' class='yst-h-5 yst-w-5' role='img'><path stroke-linecap='round' stroke-linejoin='round' d='M6 18L18 6M6 6l12 12'></path></svg>");
+		background: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='2' stroke='%2394A3B8' class='yst-h-5 yst-w-5' role='img'><path stroke-linecap='round' stroke-linejoin='round' d='M6 18L18 6M6 6l12 12'></path></svg>") no-repeat center;
+		background-size: contain;
 		content: '';
 	}
 
 	.yoast-webinar-dashboard .notice-dismiss:hover:before {
 		/* yst-text-slate-500 */
-		background: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='2' stroke='%2364748b' class='yst-h-5 yst-w-5' role='img'><path stroke-linecap='round' stroke-linejoin='round' d='M6 18L18 6M6 6l12 12'></path></svg>");
+		background: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='2' stroke='%2364748b' class='yst-h-5 yst-w-5' role='img'><path stroke-linecap='round' stroke-linejoin='round' d='M6 18L18 6M6 6l12 12'></path></svg>") no-repeat center;
+		background-size: contain;
 		content: '';
 	}
 
